--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -93,20 +93,13 @@
     </style>
     <div class="row featurette">
         <div class="col-lg-4">
-          <img class="img-circle" src="/static/img/module/3.jpg" width="140" height="140">
-          <h2>科技服务</h2>
-          <p>Donec sed odio dui</p>
+          <img src="/static/img/module/3.jpg" width="100%">
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
-          <img class="img-circle" src="/static/img/module/2.jpg" width="140" height="140">
-          <h2>医学健康</h2>
-          <p>Duis mollis</p>
+          <img src="/static/img/module/2.jpg" width="100%">
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
-          <img class="img-circle" src="/static/img/module/1.jpg" width="140" height="140">
-          <h2>信息分析</h2>
-          <p>Donec sed odio dui. Cras justo odio</p>
-
+          <img src="/static/img/module/1.jpg" width="100%">
         </div><!-- /.col-lg-4 -->
     </div>
     <hr class="featurette-divider" style="margin: 100px 0px">
@@ -117,29 +110,26 @@
     <h2 style="text-align:center;margin: 60px">核心技术/技术优势</h2>
     <div id="tn" class="row featurette">
         <div class="col-lg-5ths">
-          <img src="/static/img/tn/1.png">
+          <img src="/static/img/tn/1.jpg">
         </div>
         <div class="col-lg-5ths">
-          <img src="/static/img/tn/2.png">
+          <img src="/static/img/tn/2.jpg">
         </div>
         <div class="col-lg-5ths">
-          <img src="/static/img/tn/3.png">
+          <img src="/static/img/tn/3.jpg">
         </div>
         <div class="col-lg-5ths">
-          <img src="/static/img/tn/4.png">
+          <img src="/static/img/tn/4.jpg">
         </div>
         <div class="col-lg-5ths">
-          <img src="/static/img/tn/5.png">
+          <img src="/static/img/tn/5.jpg">
         </div>
     </div>
     <hr class="featurette-divider" style="margin-top: 130px;">
     <div class="row featurette">
-        <div class="col-md-7">
-            <h2 class="featurette-heading">公司介绍</h2>
+        <div class="col-md-12">
+            <h2 class="featurette-heading" style="text-align:center;margin: 60px">公司介绍</h2>
             {{ company.introduction|safe }}
-        </div>
-        <div class="col-md-5">
-            <img class="featurette-image img-responsive" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
         </div>
     </div>
 
