--- a/templates/base.html
+++ b/templates/base.html
@@ -75,9 +75,9 @@
             <img alt="Brand" src="/static/img/logo-1.jpeg" height="50px">
           </a>
         </div>
-          <form class="navbar-form navbar-right" role="search">
+          <form class="navbar-form navbar-right" role="search" method="get" action="/search/">
               <div class="form-group">
-                <input type="text" class="form-control" placeholder="Search">
+                <input type="text" class="form-control" placeholder="Search" name="query">
               </div>
               <button type="submit" class="btn btn-default">Search</button>
             </form>
