--- a/templates/about/contact_us.html
+++ b/templates/about/contact_us.html
@@ -27,7 +27,7 @@
             </tr>
             <tr>
               <th>地址：</th>
-              <th>北京市昌平区北七家镇西沙工业园11号9 #院</th>
+              <th>北京市昌平区北七家镇宏福大厦811室</th>
             </tr>
         </table>
     </div><!--/.col-xs-12.col-sm-9-->
