--- a/templates/base.html
+++ b/templates/base.html
@@ -93,9 +93,9 @@
       <div class="container">
         <ul class="nav navbar-nav">
         <li><a href="/">首页</a></li>
-        <li><a href="/service/" _t_nav="service">科技服务</a></li>
-        <li><a href="/medicine/1/" _t_nav="medicine">医学健康</a></li>
-        <li><a href="/support/1/" _t_nav="support">技术支持</a></li>
+        <li><a href="/service/" _t_nav="service">科研服务</a></li>
+        <li><a href="/medicine/1/" _t_nav="medicine">基础技术服务</a></li>
+        <li><a href="/support/1/" _t_nav="support">产品中心</a></li>
         <li><a href="/job/">招贤纳士</a></li>
         <li><a href="/about/company/" _t_nav="about">关于我们</a></li>
       </ul>
@@ -147,7 +147,7 @@
             <dl style="margin-left: 5%;"></dl>
             <dl>
                 <dd>
-                    <a class="link" href="/about/company/">公司介绍</a>
+                    <a class="link" href="/about/company/">关于奥美德诺</a>
                 </dd>
             </dl>
             <dl>
@@ -261,8 +261,8 @@
                   <div class="textwidget">
                       <h4 class="widget-title"><img src="/static/img/top-logo.png" width="100%"></h4>
                       <h5 class="widget-title">相关链接：</h5>
-                      <p><a href="#overview">Omega bio-tek</a></p>
-                      <p><a href="#overview">阿森泰科</a></p>
+                      <p><a href="http://omegabiotek.com">Omega bio-tek</a></p>
+                      <p><a href="http://www.arksontech.cn">阿森泰科</a></p>
                   </div>
                 </div>
             </div>
@@ -302,7 +302,7 @@
                 <div class="col-sm-4">
                   <div class="widget widget_text"><h4 class="widget-title"></h4>
                       <div class="textwidget">
-                        <p>地址：北京市昌平区北七家镇西沙工业园11号9#院</p>
+                        <p>地址：北京市昌平区北七家镇宏福大厦811室</p>
                           <p>电话：010-67832281；67832291；
                           </p>
                           <p>网址：www.omegagenetics.com.cn</p>
