--- a/templates/job/job.html
+++ b/templates/job/job.html
@@ -5,7 +5,7 @@
     <div class="jumbotron">
         <h1>招贤纳士</h1>
         <h5>简历投递方式</h5>
-        <p>简历投递至xubiaosunny@163.com,*********************</p>
+        <p>如果您有兴趣加入我们，请投递简历至sunxiaohui@aksontech.cn，我们期待您的加入！</p>
     </div>
     {% for foo in item %}
         {% if forloop.counter0|divisibleby:2 %}
