--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -93,13 +93,13 @@
     </style>
     <div class="row featurette">
         <div class="col-lg-4">
-          <img src="/static/img/module/3.jpg" width="100%">
+          <a href="{{ module_img.0.link }}"><img src="{{ MEDIA_URL }}{{ module_img.0.img }}" width="100%"></a>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
-          <img src="/static/img/module/2.jpg" width="100%">
+          <a href="{{ module_img.1.link }}"><img src="{{ MEDIA_URL }}{{ module_img.1.img }}" width="100%"></a>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
-          <img src="/static/img/module/1.jpg" width="100%">
+          <a href="{{ module_img.2.link }}"><img src="{{ MEDIA_URL }}{{ module_img.2.img }}" width="100%"></a>
         </div><!-- /.col-lg-4 -->
     </div>
     <hr class="featurette-divider" style="margin: 100px 0px">
