--- a/templates/about/company.html
+++ b/templates/about/company.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}公司介绍{% endblock %}
+{% block title %}关于奥美德诺{% endblock %}
 {% block content %}
 <div class="container">
 
@@ -7,7 +7,7 @@
 
     <div class="col-xs-12 col-sm-9">
         <div class="jumbotron">
-            <h1>公司介绍</h1>
+            <h1>关于奥美德诺</h1>
         </div>
         {{ item.introduction |safe }}
     </div><!--/.col-xs-12.col-sm-9-->
