--- a/templates/about/sidebar.html
+++ b/templates/about/sidebar.html
@@ -1,6 +1,6 @@
 <div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="sidebar">
   <div class="list-group">
-    <a href="/about/company/" class="list-group-item {% if request.path == '/about/company/' %}active{% endif %}">公司介绍</a>
+    <a href="/about/company/" class="list-group-item {% if request.path == '/about/company/' %}active{% endif %}">关于奥美德诺</a>
     <a href="/about/team/" class="list-group-item {% if request.path == '/about/team/' %}active{% endif %}">团队介绍</a>
     <a href="/about/news/" class="list-group-item {% if request.path == '/about/news/' %}active{% endif %}">新闻动态</a>
     <a href="/about/partner/" class="list-group-item {% if request.path == '/about/partner/' %}active{% endif %}">合作伙伴</a>
