--- a/templates/service/service_index.html
+++ b/templates/service/service_index.html
@@ -7,7 +7,7 @@
 
     <div class="col-xs-12 col-sm-9">
         <div class="jumbotron">
-            <h1>科技服务</h1>
+            <h1>科研服务</h1>
         </div>
         {{ description|safe }}
     </div><!--/.col-xs-12.col-sm-9-->
