--- a/templates/base.html
+++ b/templates/base.html
@@ -329,8 +329,8 @@
                 <ul id="footer-menu" class="wbc_footer_menu">
                     <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-249"><a href="/">Home</a></li>
                     <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-242"><a href="/service/">科研服务</a></li>
-                    <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-246"><a href="/medicine/1/">基础技术服务</a></li>
-                    <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-173"><a href="/support/1/">产品中心</a></li>
+                    <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-246"><a href="{{ request.session.medicine.0.0 }}">基础技术服务</a></li>
+                    <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-173"><a href="{{ request.session.support.0.0 }}">产品中心</a></li>
                     <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-250"><a href="/job/">招贤纳士</a></li>
                     <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-256"><a href="/about/company/">关于我们</a></li>
                 </ul>
