--- a/templates/base.html
+++ b/templates/base.html
@@ -72,7 +72,7 @@
       <div class="container">
         <div class="navbar-header">
           <a href="#">
-            <img alt="Brand" src="/static/img/logo-1.jpeg" height="50px">
+            <img alt="Brand" src="/static/img/logo-top.png" height="50px">
           </a>
         </div>
           <form class="navbar-form navbar-right" role="search" method="get" action="/search/">
@@ -147,7 +147,7 @@
             <dl style="margin-left: 5%;"></dl>
             <dl>
                 <dd>
-                    <a class="link" href="/about/company/">关于奥美德诺</a>
+                    <a class="link" href="/about/company/">公司介绍</a>
                 </dd>
             </dl>
             <dl>
@@ -259,7 +259,7 @@
             <div class="col-sm-2">
               <div class="widget widget_text">
                   <div class="textwidget">
-                      <h4 class="widget-title"><img src="/static/img/top-logo.png" width="100%"></h4>
+                      <h4 class="widget-title"><img src="/static/img/logo-bottom.png" width="100%"></h4>
                       <h5 class="widget-title">相关链接：</h5>
                       <p><a href="http://omegabiotek.com">Omega bio-tek</a></p>
                       <p><a href="http://www.arksontech.cn">阿森泰科</a></p>
