--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -90,6 +90,7 @@
     <hr class="featurette-divider" style="margin-bottom: 100px">
     <style>
     .featurette > .col-lg-4 {text-align:center}
+    hr.featurette-divider {border-top: 1px solid #000000;}
     </style>
     <div class="row featurette">
         <div class="col-lg-4">
@@ -130,7 +131,7 @@
     </div>
     <div class="row featurette" style="margin-top: 100px">
         <div class="col-lg-5"><hr class="featurette-divider" style="margin-bottom: 100px"></div>
-        <div class="col-lg-2"><h4 style="text-align: center">公司介绍</h4></div>
+        <div class="col-lg-2"><h4 style="text-align: center">关于奥美德诺</h4></div>
         <div class="col-lg-5"><hr class="featurette-divider" style="margin-bottom: 100px"></div>
     </div>
     <div class="row featurette">
