--- a/templates/job/job.html
+++ b/templates/job/job.html
@@ -2,6 +2,7 @@
 {% block title %}招贤纳士{% endblock %}
 {% block content %}
 <div class="container">
+    <img src="/static/img/job/job-1.jpg" width="100%">
     <div class="jumbotron">
         <h1>招贤纳士</h1>
         <h5>简历投递方式</h5>
