--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -90,7 +90,7 @@
     <hr class="featurette-divider" style="margin-bottom: 100px">
     <style>
     .featurette > .col-lg-4 {text-align:center}
-    hr.featurette-divider {border-top: 1px solid #000000;}
+    hr.featurette-divider {border-top: 1px solid #A8A8A8;}
     </style>
     <div class="row featurette">
         <div class="col-lg-4">
