--- a/templates/medicine/medicine.html
+++ b/templates/medicine/medicine.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}医学健康{% endblock %}
+{% block title %}基础技术服务{% endblock %}
 {% block content %}
 <div class="container">
 
