--- a/templates/service/service.html
+++ b/templates/service/service.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}科技服务{% endblock %}
+{% block title %}科研服务{% endblock %}
 {% block content %}
 <div class="container">
 
