--- a/templates/support/support.html
+++ b/templates/support/support.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}技术支持{% endblock %}
+{% block title %}产品中心{% endblock %}
 {% block content %}
 <div class="container">
 
