--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -1,7 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}
-
-{% endblock %}
+{% block title %}奥美德诺{% endblock %}
 {% block content %}
 <div style="min-height: 50px;">
     <!-- Jssor Slider Begin -->
