--- a/templates/base.html
+++ b/templates/base.html
@@ -5,8 +5,11 @@
     <meta name="author" content="xubiaosunny@163.com">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="奥美德诺官方网站">
+    <meta name="keywords" content="{% for k in request.session.keyword %}{% if not forloop.last %}{{ k }},{% else %}{{ k }}{% endif %}{% endfor %}" />
 
     <title>{% block title %}{% endblock %}</title>
+
     <link rel="icon" href="/static/img/favicon.ico" type="image/x-icon"/>
     <!-- Bootstrap core CSS -->
     <link href="/static/css/bootstrap.min.css" rel="stylesheet" />
